--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -30,11 +30,11 @@
                 <a href="#" class="logo">
                 </a>
                 <ul class="nav-menu" id="nav-menu">
-                    <li><a href="/admin">Home</a></li>
-                    <li><a href="#">Now Playing</a></li>  <!-- List of currently running movies -->
-    <li><a href="#">Coming Soon</a></li>  <!-- Upcoming movies -->
-    <li><a href="#">Showtimes</a></li>  <!-- Movie showtimes/schedule -->
-    <li><a href="#">Theatres</a></li> 
+                    <li><a href="/dashboard">Home</a></li>
+                    <li><a href="/now-playing">Now Playing</a></li>  <!-- List of currently running movies --> <!-- Upcoming movies -->  <!-- Movie showtimes/schedule -->
+    <li><a href="/theaters">Theatres</a></li> 
+    <li><a href="#">Buy Tickets</a></li> 
+    <li><a href="/admin">ADMIN</a></li>
                     <li>
                         <a href="#" class="btn btn-hover buy-ticket-btn">
                             <span>Log Out</span>
