pesan commit Anda

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -32,9 +32,9 @@
                 <ul class="nav-menu" id="nav-menu">
                     <li><a href="/dashboard">Home</a></li>
                     <li><a href="/now-playing">Now Playing</a></li>  <!-- List of currently running movies --> <!-- Upcoming movies -->  <!-- Movie showtimes/schedule -->
-    <li><a href="/theaters">Theatres</a></li> 
-    <li><a href="#">Buy Tickets</a></li> 
-    <li><a href="/admin">ADMIN</a></li>
+                    <li><a href="/theaters">Theatres</a></li> 
+                    <li><a href="/buy-ticket">Buy Tickets</a></li> 
+                    <li><a href="/admin">ADMIN</a></li>
                     <li>
                         <a href="#" class="btn btn-hover buy-ticket-btn">
                             <span>Log Out</span>
@@ -939,5 +939,4 @@
     <script src="/app.js"></script>
 
 </body>
-
 </html>
