--- a/views/now-playing.ejs
+++ b/views/now-playing.ejs
@@ -28,7 +28,7 @@
                 <li><a href="/dashboard">Home</a></li>
                 <li><a href="/now-playing">Now Playing</a></li>  <!-- List of currently running movies -->
                 <li><a href="/theaters">Theatres</a></li> 
-                <li><a href="#">Buy Tickets</a></li> 
+                <li><a href="/buy-ticket">Buy Tickets</a></li> 
                 <li><a href="/admin">ADMIN</a></li>
                 <li>
                     <a href="#" class="btn btn-hover buy-ticket-btn">
@@ -48,7 +48,7 @@
   <!-- Now Playing Section -->
   <div class="now-playing-section">
     <div class="container">
-      <h1 class="now-playing-header">Now Playing</h1>
+      <h1 class="now-playing-header" style="margin-bottom: 40px;">Now Playing</h1>
       <div class="now-playing-movies-grid">
         <% movies.forEach(movie => { %>
           <div class="now-playing-movie-item">
