--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -36,7 +36,7 @@
                     <li><a href="/buy-ticket">Buy Tickets</a></li> 
                     <li><a href="/admin">ADMIN</a></li>
                     <li>
-                        <a href="#" class="btn btn-hover buy-ticket-btn">
+                        <a href="/logout" class="btn btn-hover buy-ticket-btn">
                             <span>Log Out</span>
                         </a>
                     </li>
@@ -81,10 +81,10 @@
                                 </div>
                             </div>
                             <div class="item-content-description top-down delay-4">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, possimus eius. Deserunt non odit, cum vero reprehenderit laudantium odio vitae autem quam, incidunt molestias ratione mollitia accusantium, facere ab suscipit.
+                                After the death of his father, T'Challa returns home to the African nation of Wakanda to take his rightful place as king. But when a powerful enemy reappears, T'Challa's resolve as king—and as Black Panther—is tested as he faces challenges to the throne and his nation. With advanced technology, he must protect his people and embrace his destiny.
                             </div>
                             <div class="item-action top-down delay-6">
-                                <a href="#" class="btn btn-hover buy-ticket-btn">
+                                <a href="/buy-ticket" class="btn btn-hover buy-ticket-btn">
                                     <i class="bx bxs-cart"></i>
                                     <span>Buy Ticket Now</span>
                                 </a>
@@ -119,10 +119,10 @@
                                 </div>
                             </div>
                             <div class="item-content-description top-down delay-4">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, possimus eius. Deserunt non odit, cum vero reprehenderit laudantium odio vitae autem quam, incidunt molestias ratione mollitia accusantium, facere ab suscipit.
+                                Supergirl is an American superhero film, based on the DC Comics character created by Otto Binder and Al Plastino, the series follows Kara Zor-El (played by Melissa Benoist), Superman's cousin, and one of the last surviving Kryptonians from the planet Krypton.                            
                             </div>
                             <div class="item-action top-down delay-6">
-                                <a href="#" class="btn btn-hover buy-ticket-btn">
+                                <a href="/buy-ticket" class="btn btn-hover buy-ticket-btn">
                                     <i class="bx bxs-cart"></i>
                                     <span>Buy Ticket Now</span>
                                 </a>
@@ -157,10 +157,10 @@
                                 </div>
                             </div>
                             <div class="item-content-description top-down delay-4">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, possimus eius. Deserunt non odit, cum vero reprehenderit laudantium odio vitae autem quam, incidunt molestias ratione mollitia accusantium, facere ab suscipit.
+                                WandaVision follows Wanda Maximoff and Vision, two super-powered beings trying to live an ideal suburban life in the town of Westview. As they move through different eras, their world starts to shift in strange and mysterious ways, revealing deeper secrets and challenges. This series combines classic television with the Marvel Cinematic Universe, exploring grief, love, and reality.
                             </div>
                             <div class="item-action top-down delay-6">
-                                <a href="#" class="btn btn-hover buy-ticket-btn">
+                                <a href="/buy-ticket" class="btn btn-hover buy-ticket-btn">
                                     <i class="bx bxs-cart"></i>
                                     <span>Buy Ticket Now</span>
                                 </a>
@@ -753,10 +753,10 @@
                         </div>
                     </div>
                     <div class="item-content-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, possimus eius. Deserunt non odit, cum vero reprehenderit laudantium odio vitae autem quam, incidunt molestias ratione mollitia accusantium, facere ab suscipit.
+                        Transformers is an action-packed adventure where two factions of alien robots, the heroic Autobots and the villainous Decepticons, bring their ancient conflict to Earth. As they battle for control over powerful technology that could change the universe, humanity finds itself caught in the crossfire. With explosive battles and a fight for survival, this movie explores themes of loyalty, bravery, and the bond between humans and machines.
                     </div>
                     <div class="item-action">
-                        <a href="#" class="btn btn-hover buy-ticket-btn">
+                        <a href="/buy-ticket" class="btn btn-hover buy-ticket-btn">
                             <i class="bx bxs-cart"></i>
                             <span>Buy Ticket Now</span>
                         </a>
@@ -785,11 +785,11 @@
                                 </div>
                             </div>
                             <div class="theatre-box-content">
-                                <img src="./images/cinema.jpg" alt="Grand IMAX Cinema">
+                                <img src="./images/c1.jpg" alt="Grand IMAX Cinema">
                                 <p>Experience the ultimate in movie watching with crystal-clear IMAX screens and immersive sound.</p>
                             </div>
                             <div class="theatre-box-action">
-                                <a href="#" class="btn btn-hover">
+                                <a href="/theaters" class="btn btn-hover">
                                     <span>View Details</span>
                                 </a>
                             </div>
@@ -804,11 +804,11 @@
                                 </div>
                             </div>
                             <div class="theatre-box-content">
-                                <img src="./images/cinema.jpg" alt="Luxe VIP Cinema">
+                                <img src="./images/c2.jpg" alt="Luxe VIP Cinema">
                                 <p>Enjoy the ultimate luxury cinema experience with reclining seats, private lounges, and gourmet snacks.</p>
                             </div>
                             <div class="theatre-box-action">
-                                <a href="#" class="btn btn-hover">
+                                <a href="/theaters" class="btn btn-hover">
                                     <span>View Details</span>
                                 </a>
                             </div>
@@ -823,11 +823,11 @@
                                 </div>
                             </div>
                             <div class="theatre-box-content">
-                                <img src="./images/cinema.jpg" alt="Outdoor Drive-In">
+                                <img src="./images/c3.png" alt="Outdoor Drive-In">
                                 <p>Enjoy a nostalgic movie night under the stars at our classic outdoor drive-in theater.</p>
                             </div>
                             <div class="theatre-box-action">
-                                <a href="#" class="btn btn-hover">
+                                <a href="/theaters" class="btn btn-hover">
                                     <span>View Details</span>
                                 </a>
                             </div>
@@ -849,11 +849,13 @@
                     <div class="content">
                         
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut veniam ex quos hic id nobis beatae earum sapiente! Quod ipsa exercitationem officiis non error illum minima iusto et. Dolores, quibusdam?
-                        </p>
+                            <strong>Powerpuff Cinema</strong> is a vibrant, family-friendly theater that embodies the energy and aims to create a playful and exciting environment where kids and adults can enjoy movies together in dynamic setting.                        </p>
                         <div class="social-list">
                             <a href="#" class="social-item">
                                 <i class="bx bxl-facebook"></i>
+                            </a>
+                            <a href="#" class="social-item">
+                                <i class="bx bxl-youtube"></i>
                             </a>
                             <a href="#" class="social-item">
                                 <i class="bx bxl-twitter"></i>
@@ -870,10 +872,8 @@
                             <div class="content">
                                 <p><b>Flix</b></p>
                                 <ul class="footer-menu">
-                                    <li><a href="#">About us</a></li>
+                                    <li><a href="/about-us">About us</a></li>
                                     <li><a href="#">My profile</a></li>
-                                    <li><a href="#">Pricing plans</a></li>
-                                    <li><a href="#">Contacts</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -881,10 +881,8 @@
                             <div class="content">
                                 <p><b>Browse</b></p>
                                 <ul class="footer-menu">
-                                    <li><a href="#">About us</a></li>
-                                    <li><a href="#">My profile</a></li>
+                                    <li><a href="#">Now Showing</a></li>
                                     <li><a href="#">Pricing plans</a></li>
-                                    <li><a href="#">Contacts</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -892,10 +890,7 @@
                             <div class="content">
                                 <p><b>Help</b></p>
                                 <ul class="footer-menu">
-                                    <li><a href="#">About us</a></li>
-                                    <li><a href="#">My profile</a></li>
-                                    <li><a href="#">Pricing plans</a></li>
-                                    <li><a href="#">Contacts</a></li>
+                                    <li><a href="/contact">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
