--- a/views/now-playing.ejs
+++ b/views/now-playing.ejs
@@ -31,7 +31,7 @@
                 <li><a href="/buy-ticket">Buy Tickets</a></li> 
                 <li><a href="/admin">ADMIN</a></li>
                 <li>
-                    <a href="#" class="btn btn-hover buy-ticket-btn">
+                    <a href="/logout" class="btn btn-hover buy-ticket-btn">
                         <span>Log Out</span>
                     </a>
                 </li>
@@ -74,11 +74,13 @@
                 <div class="content">
                     
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut veniam ex quos hic id nobis beatae earum sapiente! Quod ipsa exercitationem officiis non error illum minima iusto et. Dolores, quibusdam?
-                    </p>
+                        <strong>Powerpuff Cinema</strong> is a vibrant, family-friendly theater that embodies the energy and aims to create a playful and exciting environment where kids and adults can enjoy movies together in dynamic setting.                        </p>
                     <div class="social-list">
                         <a href="#" class="social-item">
                             <i class="bx bxl-facebook"></i>
+                        </a>
+                        <a href="#" class="social-item">
+                            <i class="bx bxl-youtube"></i>
                         </a>
                         <a href="#" class="social-item">
                             <i class="bx bxl-twitter"></i>
@@ -95,10 +97,8 @@
                         <div class="content">
                             <p><b>Flix</b></p>
                             <ul class="footer-menu">
-                                <li><a href="#">About us</a></li>
+                                <li><a href="/about-us">About us</a></li>
                                 <li><a href="#">My profile</a></li>
-                                <li><a href="#">Pricing plans</a></li>
-                                <li><a href="#">Contacts</a></li>
                             </ul>
                         </div>
                     </div>
@@ -106,10 +106,8 @@
                         <div class="content">
                             <p><b>Browse</b></p>
                             <ul class="footer-menu">
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">My profile</a></li>
+                                <li><a href="/now-playing">Now Showing</a></li>
                                 <li><a href="#">Pricing plans</a></li>
-                                <li><a href="#">Contacts</a></li>
                             </ul>
                         </div>
                     </div>
@@ -117,10 +115,7 @@
                         <div class="content">
                             <p><b>Help</b></p>
                             <ul class="footer-menu">
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">My profile</a></li>
-                                <li><a href="#">Pricing plans</a></li>
-                                <li><a href="#">Contacts</a></li>
+                                <li><a href="/contact">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
