feat: payment details

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -30,6 +30,7 @@
                     <li><a href="/now-playing">Now Playing</a></li>
                     <li><a href="/theaters">Theatres</a></li>
                     <li><a href="/buy-ticket">Buy Tickets</a></li>
+                    <li><a href="/payments">Payments</a></li>
                     <li><a href="/admin">ADMIN</a></li>
                     <li>
                         <a href="/logout" class="btn btn-hover buy-ticket-btn">
