--- a/views/now-playing.ejs
+++ b/views/now-playing.ejs
@@ -28,7 +28,8 @@
                 <li><a href="/dashboard">Home</a></li>
                 <li><a href="/now-playing">Now Playing</a></li>  <!-- List of currently running movies -->
                 <li><a href="/theaters">Theatres</a></li> 
-                <li><a href="/buy-ticket">Buy Tickets</a></li> 
+                <li><a href="/buy-ticket">Buy Tickets</a></li>
+                <li><a href="/payments">Payments</a></li> 
                 <li><a href="/admin">ADMIN</a></li>
                 <li>
                     <a href="/logout" class="btn btn-hover buy-ticket-btn">
